Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35410

[Subdoc] Wholedoc mutations do not update datatype to match new document

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 6.0.3, 6.5.0
    • 5.0.1, 5.1.0, 5.1.1, 5.1.2, 5.1.3, 5.5.0, 5.5.1, 5.5.2, 5.5.3, 5.5.4, 5.5.5, 6.0.0, 6.0.1, 6.0.2
    • couchbase-bucket
    • None
    • Triaged
    • No
    • KV-Engine MH Beta part 2

    Description

      When Couchbase Server sends a DCP Mutation packet for a binary document with extended attributes the datatype field is incorrectly set to 5 (JSON + XAttrs) and not 4 (Raw + XAttrs).

      The earliest version of Couchbase Server I have tested is 5.0.1 (because there isn't a docker container for 5.0.0).

      I have included a tcpdump which should contain an effected mutation packet if filtered as 'couchbase and couchbase.opcode == 0x57'

      Steps to reproduce:
      1, Spin up a Couchbase 5.0.1 docker/vagrant cluster container.
      2, Use a later version of cbworkloadgen (which supports xattrs) to insert a single binary document with xattrs.
      3, Start tcpdump listening for network from Couchbase Server 'tcpdump -i any -C 1024 -W 10 -w dump.pcap -s 0 port 11210'.
      4, Create a backup of the previously created bucket using cbbackupmgr.
      5, Look at the datatype for the relevant dcp mutation packet sent by Couchbase Server.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            james.lee James Lee
            james.lee James Lee
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty