MB-35410: Update datatype on wholedoc operation

Wholedoc ops (as part of a subdoc multimutation) can replace the entire
document - potentially with a new value which does not match the
current datatype. E.g., existing json document replaced with non-json
raw bytes.

The datatype should be updated in this case.

Change-Id: I481209ac5c29f6f60a4b0f0ec93a3d3b2acd09e5
Reviewed-on: http://review.couchbase.org/113067
Well-Formed: Build Bot <build@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>