tests/testapp/testapp.cc
@@ -933,6 +933,21 @@ fetch_value(const std::string& key) {
     }
 }
 
+void validate_datatype_is_json(const std::string& key, bool isJson) {
+    std::vector<uint8_t> blob;
+    BinprotGetCommand cmd;
+    cmd.setKey(key);
+    cmd.encode(blob);
+    safe_send(blob.data(), blob.size(), false);
+
+    blob.resize(0);
+    safe_recv_packet(blob);
+    BinprotGetResponse rsp;
+    rsp.assign(std::move(blob));
+    ASSERT_EQ(uint16_t(cb::mcbp::Status::Success), rsp.getStatus());
+    EXPECT_EQ(isJson, rsp.getDatatype() & PROTOCOL_BINARY_DATATYPE_JSON);
+}
+
 void validate_object(const char *key, const std::string& expected_value) {
     union {
         protocol_binary_request_no_extras request;
